Fix text alignment on context examples

--- a/frontend/packages/portal-frontend/src/peddepLandingPage/styles/PeddepPage.scss
+++ b/frontend/packages/portal-frontend/src/peddepLandingPage/styles/PeddepPage.scss
@@ -196,11 +196,6 @@
   }
 
   .cardImg {
-    display: flex;
-
-    flex-direction: column;
-    align-items: center;
-
     img {
       width: 100%;
       aspect-ratio: 3 / 3; /* Ensures uniform height */
